--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: dams
 Title: Dams in the United States from the National Inventory of Dams
     (NID)
 Description: The single largest source of dams in the United States is the
-    National Inventory of Dams (NID, http://nid.usace.army.mil) from the US
+    National Inventory of Dams (NID) <http://nid.usace.army.mil> from the US
     Army Corps of Engineers. Entire data from the NID cannot be obtained all at
     once and NID's website limits extraction of more than a couple of thousand
     records at a time. Moreover, selected data from the NID's user interface
