--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(get_nid)
 importFrom(crul,ok)
 importFrom(fauxpas,http200)
-importFrom(httr,GET)
-importFrom(httr,content)
-importFrom(utils,data)
-importFrom(utils,read.csv)
+importFrom(janitor,clean_names)
+importFrom(readxl,read_excel)
+importFrom(utils,download.file)
