--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ LazyData: true
 Depends:
     R (>= 2.10)
 NeedsCompilation: no
-RoxygenNote: 7.0.2
+Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
+RoxygenNote: 7.1.0
 VignetteBuilder: knitr
 Encoding: UTF-8
