--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,9 @@ Title: Dams in the United States from the National Inventory of Dams
     (NID)
 Description: The single largest source of dams in the United States is the
     National Inventory of Dams (NID) <http://nid.usace.army.mil> from the US
-    Army Corps of Engineers. Entire data from the NID cannot be obtained all at
-    once and NID's website limits extraction of more than a couple of thousand
-    records at a time. Moreover, selected data from the NID's user interface
-    cannot not be saved to a file. In order to make the analysis of this data
-    easier, all the data from NID was extracted manually. Subsequently, the raw
-    data was checked for potential errors and cleaned. This package provides
-    sample cleaned data from the NID and provides functionality to access the
-    entire cleaned NID data.
+    Army Corps of Engineers. To make the analysis of this data
+    easier, access to the NID is provided herein. This package provides
+    a subset of NID fields and programmatic access to the entire NID dataset.
 Version: 0.3.0
 Authors@R: c(
     person("Gopi", "Goteti", role = c("aut")),
