--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.7.3
-pkgdown: 1.5.1
+pandoc: '2.12'
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   dams: dams.html
-last_built: 2020-05-20T17:40Z
+last_built: 2021-08-03T13:18Z
 
